# Telegram-iOS

./: .appveyor.yml  .bazelrc  .bazelrc.swp  .buckconfig  .clang-format  .cursorignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  Android.mk  BUCK  BUILD  BUILD.bazel  BlockingQueue.cpp  BlockingQueue.h  BufferInputStream.cpp  BufferInputStream.h  BufferOutputStream.cpp  BufferOutputStream.h  BufferPool.cpp  BufferPool.h  Buffers.cpp  Buffers.h  CLAUDE.md  CMakeLists.txt  COPYING  Changelog-beta.txt  CongestionControl.cpp  CongestionControl.h  EchoCanceller.cpp  EchoCanceller.h  Entitlements.entitlements  GenerateLocalization  HockeySDK-Source.podspec  HockeySDK.podspec  Intents.intentdefinition  JitterBuffer.cpp  (+102 more)
example/: CMakeLists.txt  demo.cpp  efl_animview.cpp  evasapp.cpp  evasapp.h  layout.edc  lottie2gif.cpp  lottieview.cpp  lottieview.h  lottieviewer.cpp  lottieviewtest.cpp  meson.build  pathtest.cpp  rlottietest.cpp  uxsampletest.cpp  vectortest.cpp
example/resource/: 360º_degree.json  ModernPictogramsForLottie_LoudMute.json  abstract_circle.json  anubis.json  circuit.json  crunches.json  cue_lottie2.json  data.json  dead_lift.json  dynamic_path_test.json  eid_mubarak.json  hiking.json  icon_animation.json  it's_lunch_time!.json  layout.edc  layout.edj  leap_frog_loader.json  loading_.json  loading_rectangles.json  mask.json  matte_two_item_with_lowerlayer.json  ondas.json  polystar_star_with_roundness_points_stroke_99.json  rowing_machine.json  running.json  star_jumps.json  telegram.json  triib_manage.json  walking.json  worm.json  yoga.json
example/resource/UXSample_1920x1080/: A Shapes_All_01_1920x1080.json  E Interpolation_All_01_1920x1080.json  F Masks_All_01_1920x1080.json
src/: CMakeLists.txt  meson.build
src/binding/: .lottieplayer.cpp.swp
src/binding/c/: CMakeLists.txt  lotplayer_capi.h  lottieanimation_capi.cpp  lottieplayer.cpp  lottieplayer_c.cpp  meson.build
src/lottie/: CMakeLists.txt  lottieanimation.cpp  lottieitem.cpp  lottieitem.h  lottiekeypath.cpp  lottiekeypath.h  lottieloader.cpp  lottieloader.h  lottiemodel.cpp  lottiemodel.h  lottieparser.cpp  lottieparser.h  lottieplayer.cpp  lottieproxymodel.h  meson.build
src/lottie/rapidjson/: document.h  meson.build  rapidjson.h  reader.h
src/lottie/rapidjson/internal/: ieee754.h
src/vector/: CMakeLists.txt  config.h  meson.build  vbezier.cpp  vbezier.h  vbitmap.cpp  vbitmap.h  vbrush.cpp  vbrush.h  vcompositionfunctions.cpp  vcowptr.h  vdasher.cpp  vdasher.h  vdebug.cpp  vdebug.h  vdrawable.cpp  vdrawable.h  vdrawhelper.cpp  vdrawhelper.h  vdrawhelper_neon.cpp  vdrawhelper_sse2.cpp  velapsedtimer.cpp  velapsedtimer.h  vglobal.h  vimageloader.cpp  vimageloader.h  vinterpolator.cpp  vinterpolator.h  vline.h  vmatrix.cpp  vmatrix.h  vpainter.cpp  vpainter.h  vpath.cpp  vpath.h  vpathmesure.cpp  vpathmesure.h  vpoint.h  vraster.cpp  vraster.h  (+8 more)
src/vector/freetype/: CMakeLists.txt  meson.build  v_ft_math.cpp  v_ft_raster.cpp  v_ft_raster.h  v_ft_stroker.cpp  v_ft_stroker.h
src/vector/pixman/: CMakeLists.txt  meson.build  pixman-arm-neon-asm.S
src/vector/stb/: CMakeLists.txt  meson.build  stb_image.cpp  stb_image.h
submodules/RLottie/Sources/rlottie/: .gitignore  .travis.yml  COPYING  README.md  meson.build
submodules/RLottie/Sources/rlottie/example/: CMakeLists.txt  efl_animview.cpp  evasapp.cpp  lottie2gif.cpp  lottieview.h  lottieviewer.cpp  meson.build
submodules/RLottie/Sources/rlottie/inc/: rlottie.h
submodules/RLottie/Sources/rlottie/src/: meson.build
submodules/rlottie/rlottie/test/: CMakeLists.txt  test_vpath.cpp
submodules/ton/tonlib-src/: CMakeLists.txt  DISCLAIMER  HOWTO  LGPLv2  LICENSE.LGPL  README
submodules/ton/tonlib-src/CMake/: FindMHD.cmake  UseLATEX.cmake
submodules/ton/tonlib-src/adnl/: CMakeLists.txt  adnl-ext-client.cpp  adnl-ext-client.h  adnl-ext-client.hpp  adnl-ext-connection.cpp  adnl-ext-connection.hpp  adnl-node-id.hpp  adnl-query.cpp  adnl-query.h
submodules/ton/tonlib-src/common/: CMakeLists.txt  checksum.h  delay.h  errorcode.h  errorlog.cpp  errorlog.h  int-to-string.hpp  io.hpp  status.h
submodules/ton/tonlib-src/crypto/: CMakeLists.txt  Ed25519.cpp  Ed25519.h
submodules/ton/tonlib-src/crypto/block/: Binlog.cpp  Binlog.h  adjust-block.cpp  block-auto.cpp  block-auto.h  block-binlog.h  block-db-impl.h  block-db.cpp  block-db.h  block-parse.cpp  block-parse.h  block.cpp  block.h  block.tlb  check-proof.cpp  check-proof.h  create-state.cpp  dump-block.cpp  mc-config.cpp  mc-config.h  output-queue-merger.cpp  output-queue-merger.h  test-block.cpp  test-weight-distr.cpp  transaction.cpp  transaction.h
submodules/ton/tonlib-src/crypto/common/: AtomicRef.h  bigexp.cpp  bigexp.h  bigint.cpp  bigint.hpp  util.h  (+9 more)
submodules/ton/tonlib-src/keys/: CMakeLists.txt  encryptor.cpp  encryptor.h  encryptor.hpp  keys.cpp  keys.hpp
submodules/ton/tonlib-src/lite-client/: CMakeLists.txt  lite-client-common.cpp  lite-client-common.h  lite-client.cpp  lite-client.h
submodules/ton/tonlib-src/memprof/: CMakeLists.txt
submodules/ton/tonlib-src/tdactor/: .gitrepo  CMakeLists.txt
submodules/ton/tonlib-src/tddb/: CMakeLists.txt
submodules/ton/tonlib-src/tdnet/: CMakeLists.txt
submodules/ton/tonlib-src/tdtl/: .gitrepo
submodules/ton/tonlib-src/tdutils/: .gitrepo  CMakeLists.txt
submodules/ton/tonlib-src/terminal/: CMakeLists.txt  terminal.cpp  terminal.h  terminal.hpp
submodules/ton/tonlib-src/test/: regression-tests.ans  test-hello-world.cpp  test-td-main.cpp
submodules/ton/tonlib-src/tl/: CMakeLists.txt
submodules/ton/tonlib-src/tl-utils/: CMakeLists.txt  common-utils.hpp  lite-utils.cpp  lite-utils.hpp  tl-utils.cpp  tl-utils.hpp
submodules/ton/tonlib-src/ton/: lite-tl.hpp  ton-io.hpp  ton-shard.h  ton-tl.hpp  ton-types.h
submodules/ton/tonlib-src/tonlib/: .CMakeLists.txt.swp  CMakeLists.txt  TonlibConfig.cmake  tonlibclientjson_export_list
test/: meson.build  ssgtestsuite.cpp  test_lottieanimation.cpp  test_lottieanimation_capi.cpp  test_vpath.cpp  test_vrect.cpp  testftraster.cpp  testsgregion.cpp
(+21054 files in other folders)
