load("@sourcekit_bazel_bsp//rules:setup_sourcekit_bsp.bzl", "setup_sourcekit_bsp")

setup_sourcekit_bsp(
    name = "setup_sourcekit_bsp_telegram_project",
    bazel_wrapper = "./build-input/bazel-8.4.2-darwin-arm64",
    files_to_watch = [
        "**/*.swift",
    ],
    index_flags = [
        "config=index_build",
    ],
    targets = [
        "//Telegram:Telegram",
    ],
)
