load("@sourcekit_bazel_bsp//rules:setup_sourcekit_bsp.bzl", "setup_sourcekit_bsp")

exports_files(["versions.json"])

setup_sourcekit_bsp(
    name = "setup_sourcekit_bsp",
    bazel_wrapper = "./build-input/bazel-8.4.2-darwin-arm64",
    files_to_watch = [
        "Telegram/**/*.swift",
        "Telegram/**/*.h",
        "Telegram/**/*.m",
        "Telegram/**/*.mm",
        "Telegram/**/*.c",
        "Telegram/**/*.cpp",
        "submodules/**/*.swift",
        "submodules/**/*.h",
        "submodules/**/*.m",
        "submodules/**/*.mm",
        "submodules/**/*.c",
        "submodules/**/*.cpp",
    ],
    aquery_flags = [
    ],
    index_flags = [
        "config=index_build",
    ],
    index_build_batch_size = 10,
    targets = [
        "//Telegram:Telegram",
    ],
)
